# customer-brain

./: .gitignore  README.md  account_intel.db  pyproject.toml
alembic/: env.py
alembic/versions/: 20260511_0001_init.py  20260512_0002_expand_signals.py
src/: _token_tracker.py
src/account_intel/api/: app.py
src/account_intel/db/: __init__.py  models.py
src/account_intel/feeders/: __init__.py  hubspot.py
src/account_intel/modules/: __init__.py  churn.py  renewal.py  sales_pulse.py
src/account_intel/rollup/: service.py
src/account_intel/rollup/prompts/: summaries.md
src/account_intel/sales/: __init__.py  _claude.py  briefs.py  deals.py  emails.py
src/account_intel/scripts/: nightly_refresh.py
src/account_intel/support/: __init__.py  ticket_ai.py
src/account_intel/ui/: _ai_bubble.py  _common.py  _theme.py  client_app.py  internal_app.py  sales_app.py
src/health/: __init__.py  cli.py  config.py  delivery.py  digest.py  pipeline.py  roster.py  scoring.py
src/health/sources/: __init__.py  hubspot_companies.py  hubspot_deals.py  hubspot_tickets.py  integration_health.py
src/support_admin/: __init__.py  cli.py  config.py  contract_status.py  db.py  dedup.py  embeddings.py  hubspot_client.py  runner.py  ticket_report.py  vip.py
tests/: conftest.py  fixtures.py  test_api_unit.py  test_ask_and_history.py  test_dedup.py  test_delivery.py  test_digest.py  test_embeddings.py  test_expansion_unit.py  test_feeder_unit.py  test_hubspot_client.py  test_modules.py  test_runner.py  test_sales_mode.py  test_scoring.py  test_ticket_report.py  test_vip.py
