[project]
name = "customer-brain"
version = "0.2.0"
description = "Unified per-customer brain. Merges account-intel (Streamlit unified view) + health (nightly health digest) + support_admin (ticket dedup, repeat-issue, VIP routing). HubSpot signals \u2192 Claude roll-up \u2192 risk/narrative/next-best-actions \u2192 daily delivery."
requires-python = ">=3.11"
dependencies = [
  # account-intel deps
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "tenacity>=9.0",
  "anthropic>=0.40",
  "streamlit>=1.40",
  "pandas>=2.2",
  "python-dotenv>=1.0",
  # health module deps
  "hubspot-api-client>=10.0",
  "simple-salesforce>=1.12.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "jinja2>=3.1",
  "click>=8.1",
  "plotly>=5.24",
  # support_admin deps
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
]
embeddings-local = [
  "sentence-transformers>=2.5",
]
embeddings-openai = [
  "openai>=1.30",
]

[project.scripts]
account-intel = "account_intel.cli:cli"
health-digest = "health.cli:cli"
support-admin = "support_admin.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
